--- a/html/HomePage/NewsDoc.html
+++ b/html/HomePage/NewsDoc.html
@@ -4,8 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/img/ico.ico">
-    <title>BMS - Building Management System</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -13,8 +11,9 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/CSS/all.css">
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link rel="icon" type="image/png" href="/img/ico.ico">
+    <title>Chi tiết sản phẩm</title>
+    <script src="/js/all.js"></script>
 </head>
 
 <body>
@@ -76,23 +75,26 @@
     </nav>
     <!-- End header -->
 
+    <main>
+        <!-- Menu -->
+        <div class="container px-4 px-lg-5 my-5">
+            <div class="row gx-4 gx-lg-5 align-items-center" id="showContent">
 
-
-    <section class="py-3" id="showContent">
-
-    </section>
-
-
-    <section class="py-3">
-        <div class="container px-4 px-lg-5 mt-3">
-            <h2 class="fw-bolder mb-4 text-center">Những dịch vụ BMS:</h2>
-            <div id="related-BMSService" ;
-                class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             </div>
         </div>
-    </section>
 
+        <section class="py-5">
+            <div class="container px-4 px-lg-5 mt-5">
+                <h2 class="fw-bolder mb-4 text-center">Những tin tức liên quan</h2>
+                <div id="related-News"
+                    class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
 
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <script type="module" src="/js/News/news.js"></script>
     <footer class="bg-light py-3">
         <div class="container text-center">
             <!-- Social Media -->
@@ -137,8 +139,7 @@
             </div>
         </div>
     </footer>
-    <script type="module" src="/js/viewBMS.js"></script>
-    <script src="/js/all.js"></script>
+
 </body>
 
 </html>
