--- a/html/index.html
+++ b/html/index.html
@@ -8,8 +8,8 @@
     <link rel="icon" type="image/png" href="/img/ico.ico">
     <title>AKS Việt Nam</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
-    <link rel="stylesheet" href="/CSS/style.css">
     <link rel="stylesheet" href="/CSS/all.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
@@ -22,148 +22,119 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <script type="module" src="/js/all.js"></script>
 </head>
 
 <body>
-    <section id="header">
-        <div class="header-top">
-            <a href="mailto:aksvietnam@gmail.com" class="email">aksvietnam@gmail.com | 04.3998 2227</a>
-        </div>
+    <!-- Start header -->
+    <div class="header-top">
+        <a href="mailto:aksvietnam@gmail.com" class="email">aksvietnam@gmail.com | 04.3998 2227</a>
+    </div>
 
-        <div class="header-main">
-            <div class="logo-container">
-                <a href="/html/index.html">
-                    <img src="/img/logo-ask-removebg-preview.png" class="logo" alt="AKS Vietnam Logo">
-                </a>
-            </div>
-        </div>
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                    Menu
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto">
-                        <li class="nav-item"><a class="nav-link pd" href="/html/aboutUs.html">GIỚI THIỆU</a></li>
-
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle pd"
-                                href="/html/product/product.html" id="dropdown1" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                SẢN XUẤT
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item"
-                                        href="/html/product/product.html?thietBiBaoChay">
-                                        Thiết bị báo cháy</a></li>
-                                <li><a class="dropdown-item"
-                                        href="/html/product/product.html?thietBiCanhBao">
-                                        Thiết bị giám sát</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle pd" href="#" id="dropdown2" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                LẮP ĐẶT HỆ THỐNG
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="http://wsm.aks.vn/dang-nhap">Hệ thống giám sát quan trắc khí tượng thủy văn</a>
-                                </li>
-                                <li><a class="dropdown-item" href="#">Hệ thống phòng cháy chữa cháy</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle pd" href="/html/Security/security.html" id="dropdown3" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                DỊCH VỤ AN NINH
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item"
-                                        href="/html/Security/securityTemplate.html?maso=0">
-                                        Giải pháp cho máy ATM</a></li>
-                                <li><a class="dropdown-item"
-                                    href="/html/Security/securityTemplate.html?maso=1">
-                                        Giải pháp cho siêu thị</a></li>
-                                <li><a class="dropdown-item"
-                                    href="/html/Security/securityTemplate.html?maso=2">
-                                        Dịch vụ bảo vệ</a></li>
-                                <li><a class="dropdown-item"
-                                    href="/html/Security/securityTemplate.html?maso=3">
-                                        Mô hình an ninh nhà riêng</a></li>
-                                <li><a class="dropdown-item"
-                                    href="/html/Security/securityTemplate.html?maso=4">
-                                        Giải pháp cho nhà máy</a></li>
-                            </ul>
-                        </li>
-
-
-                        <li class="nav-item"><a class="nav-link pd" href="/html/Contact.html">LIÊN HỆ</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </section>
-    <section id="headBanner" class="section-p1">        
-    <div class="container-fluid header-carousel px-0 mb-5">
-        <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="w-100" src="/img/Banner/security.jpg" alt="Image">
-                    <div class="carousel-caption">
-                        <div class="container">
-                            <div class="row justify-content-center">
-                                <div class="col-lg-7 text-center">
-                                    <h1 class="text-white animated slideInRight">Giới thiệu về AKS Việt Nam</h1>
-                                    <p class="mb-5 animated slideInRight">Cung cấp các giải pháp an ninh và kỹ
-                                        thuật hàng đầu, bao gồm hệ thống giám sát, cảnh báo an ninh cho ngôi
-                                        nhà, giám sát và điều khiển từ xa hệ thống mạng lưới, hỗ trợ kỹ thuật và
-                                        an ninh trực tuyến và tại chỗ cho các tòa nhà và đơn vị.</p>
-                                    <a href="" class="btn btn-primary py-3 px-5 animated slideInRight">Tìm hiểu
-                                        thêm</a>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="w-100" src="/img/Banner/slide1.jpg" alt="Image">
-                    <div class="carousel-caption">
-                        <div class="container">
-                            <div class="row justify-content-center">
-                                <div class="col-lg-7 text-center">
-                                    <h1 class="text-white animated slideInLeft">Giới thiệu về AKS Việt Nam</h1>
-                                            <p class="mb-5 animated slideInLeft">Cung cấp các giải pháp an ninh và kỹ
-                                                thuật hàng đầu, bao gồm hệ thống giám sát, cảnh báo an ninh cho ngôi
-                                                nhà, giám sát và điều khiển từ xa hệ thống mạng lưới, hỗ trợ kỹ thuật và
-                                                an ninh trực tuyến và tại chỗ cho các tòa nhà và đơn vị.</p>
-                                            <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Tìm hiểu
-                                                thêm</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#header-carousel" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+    <div class="header-main">
+        <div class="logo-container">
+            <a href="/html/index.html">
+                <img src="/img/logo-ask-removebg-preview.png" class="logo" alt="AKS Vietnam Logo">
+            </a>
         </div>
     </div>
-    <!-- Carousel End -->
+
+    <!-- Chỉ có navbar là sticky -->
+    <nav id="header" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                Menu
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item"><a class="nav-link pd" href="/html/aboutUs.html">GIỚI THIỆU</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle pd" href="#" id="dropdown1"
+                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            MẢNG AN NINH
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/html/product/product.html?thietBiCanhBao">
+                                    Thiết bị giám sát</a></li>
+                            <li><a class="dropdown-item" href="/html/Security/security.html">
+                                    Dịch vụ an ninh</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle pd" href="#" id="dropdown2" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            MẢNG DỊCH VỤ KỸ THUẬT TÒA NHÀ
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/html/buildingServices/bms.html">BMS - Building Management System</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a class="nav-link pd"  href="/html/product/product.html?thietBiBaoChay">MẢNG PHÒNG CHÁY - CHỮA CHÁY</a></li>
+                    <li class="nav-item"><a class="nav-link pd"  href="/html/product/product.html?thietBiQuanTrac">MẢNG QUAN TRẮC KHÍ TƯỢNG THỦY VĂN</a></li>                    
+                    <li class="nav-item"><a class="nav-link pd" href="/html/Contact.html">LIÊN HỆ</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- End header -->
+
+    <section id="headBanner" class="section-p1">
+        <div class="container-fluid header-carousel px-0 mb-5">
+            <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="w-100" src="/img/Banner/security.jpg" alt="Image">
+                        <div class="carousel-caption">
+                            <div class="container">
+                                <div class="row justify-content-center">
+                                    <div class="col-lg-7 text-center">
+                                        <h1 class="text-white animated slideInRight">Giới thiệu về AKS Việt Nam</h1>
+                                        <p class="mb-5 animated slideInRight">Cung cấp các giải pháp an ninh và kỹ
+                                            thuật hàng đầu, bao gồm hệ thống giám sát, cảnh báo an ninh cho ngôi
+                                            nhà, giám sát và điều khiển từ xa hệ thống mạng lưới, hỗ trợ kỹ thuật và
+                                            an ninh trực tuyến và tại chỗ cho các tòa nhà và đơn vị.</p>
+                                        <a href="" class="btn btn-primary py-3 px-5 animated slideInRight">Tìm hiểu
+                                            thêm</a>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100" src="/img/Banner/slide1.jpg" alt="Image">
+                        <div class="carousel-caption">
+                            <div class="container">
+                                <div class="row justify-content-center">
+                                    <div class="col-lg-7 text-center">
+                                        <h1 class="text-white animated slideInLeft">Giới thiệu về AKS Việt Nam</h1>
+                                        <p class="mb-5 animated slideInLeft">Cung cấp các giải pháp an ninh và kỹ
+                                            thuật hàng đầu, bao gồm hệ thống giám sát, cảnh báo an ninh cho ngôi
+                                            nhà, giám sát và điều khiển từ xa hệ thống mạng lưới, hỗ trợ kỹ thuật và
+                                            an ninh trực tuyến và tại chỗ cho các tòa nhà và đơn vị.</p>
+                                        <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Tìm hiểu
+                                            thêm</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#header-carousel"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+        <!-- Carousel End -->
     </section>
     <section class="py-3" id="features" style="background-color: #f2f5f9 !important;">
         <div class="container py-5">
@@ -213,7 +184,18 @@
             </div>
         </div>
     </section>
-    
+
+    <section class="py-3" id="features">
+        <div class="text-center mx-auto" style="max-width: 800px;">
+            <h3 class="display-5s mb-8">Tin tức</h3>
+        </div>
+        <div class="container px-4 px-lg-5 mt-5">
+            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center" id="news-list">
+
+            </div>
+        </div>
+    </section>
+
     <!-- Featurs Section Start -->
     <div class="container-fluid featurs py-5">
         <div class="text-center mx-auto" style="max-width: 800px;">
@@ -258,7 +240,8 @@
                     <div class="featurs-item text-center rounded bg-light p-4">
                         <div class="featurs-icon btn-square rounded-circle mb-5 mx-auto"
                             style="background-color: #3a389b;">
-                            <i class="fa-solid fa-hand-holding-dollar fa-2x text-white" style="font-size: 3em !important;"></i>
+                            <i class="fa-solid fa-hand-holding-dollar fa-2x text-white"
+                                style="font-size: 3em !important;"></i>
                         </div>
                         <div class="featurs-content text-center">
                             <h5>Giá cả cạnh tranh</h5>
@@ -280,7 +263,6 @@
         </div>
     </div>
     <!-- Featurs Section End -->
-
 
     <footer class="bg-light py-3">
         <div class="container text-center">
@@ -328,9 +310,10 @@
     </footer>
 
     <!-- JavaScript Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="/js/all.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="/js/News/news.js"></script>
 </body>
-
 
 </html>
