Update đường dẫn file , thay đổi homepage

--- a/html/HomePage/NewsDoc.html
+++ b/html/HomePage/NewsDoc.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/CSS/all.css">
     <link rel="icon" type="image/png" href="/img/ico.ico">
     <title>Chi tiết sản phẩm</title>
-    <script src="/js/all.js"></script>
+    <script src="/js/All/all.js"></script>
 </head>
 
 <body>
@@ -54,16 +54,7 @@
                                     Dịch vụ an ninh</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle pd" href="#" id="dropdown2" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            MẢNG DỊCH VỤ KỸ THUẬT TÒA NHÀ
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/html/buildingServices/bms.html">BMS - Building
-                                    Management System</a></li>
-                        </ul>
-                    </li>
+                    <li class="nav-item"><a class="nav-link pd" href="/html/buildingServices/bms.html">MẢNG DỊCH VỤ KỸ THUẬT TÒA NHÀ</a></li>
                     <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiBaoChay">MẢNG
                             PHÒNG CHÁY - CHỮA CHÁY</a></li>
                     <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiQuanTrac">MẢNG
