--- a/html/buildingServices/bmsTemplate.html
+++ b/html/buildingServices/bmsTemplate.html
@@ -31,8 +31,8 @@
         </div>
     </div>
 
-    <!-- Chỉ có navbar là sticky -->
-    <nav id="header" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+     <!-- Chỉ có navbar là sticky -->
+     <nav id="header" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -43,6 +43,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link pd" href="/html/aboutUs.html">GIỚI THIỆU</a></li>
+                    <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiQuanTrac">MẢNG
+                            QUAN TRẮC KHÍ TƯỢNG THỦY VĂN</a></li>
+                    <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiBaoChay">MẢNG
+                            PHÒNG CHÁY - CHỮA CHÁY</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle pd" href="#" id="dropdown1" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -55,26 +59,15 @@
                                     Dịch vụ an ninh</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle pd" href="#" id="dropdown2" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            MẢNG DỊCH VỤ KỸ THUẬT TÒA NHÀ
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/html/buildingServices/bms.html">BMS - Building
-                                    Management System</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiBaoChay">MẢNG
-                            PHÒNG CHÁY - CHỮA CHÁY</a></li>
-                    <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiQuanTrac">MẢNG
-                            QUAN TRẮC KHÍ TƯỢNG THỦY VĂN</a></li>
+                    <li class="nav-item"><a class="nav-link pd" href="/html/buildingServices/bms.html">MẢNG DỊCH VỤ KỸ
+                            THUẬT TÒA NHÀ</a></li>
                     <li class="nav-item"><a class="nav-link pd" href="/html/Contact.html">LIÊN HỆ</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <!-- End header -->
+
 
 
 
@@ -137,7 +130,7 @@
             </div>
         </div>
     </footer>
-    <script type="module" src="/js/viewBMS.js"></script>
+    <script type="module" src="/js/BuildingService/viewBMS.js"></script>
     <script src="/js/all.js"></script>
 </body>
 
