--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,8 @@
 <body>
     <!-- Start header -->
     <div class="header-top">
-        <a href="mailto:aksvietnam@gmail.com" class="email">aksvietnam@gmail.com | 04.3998 2227</a>
+        <a href="/html/aboutUs.html" class="email">Giới thiệu |</a>
+        <a href="/html/Contact.html" class="email">Liên hệ</a>
     </div>
 
     <div class="header-main">
@@ -40,43 +41,7 @@
 
     <!-- Chỉ có navbar là sticky -->
     <nav id="header" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                Menu
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link pd" href="/html/aboutUs.html">GIỚI THIỆU</a></li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle pd" href="#" id="dropdown1"
-                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            MẢNG AN NINH
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/html/product/product.html?thietBiCanhBao">
-                                    Thiết bị giám sát</a></li>
-                            <li><a class="dropdown-item" href="/html/Security/security.html">
-                                    Dịch vụ an ninh</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle pd" href="#" id="dropdown2" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            MẢNG DỊCH VỤ KỸ THUẬT TÒA NHÀ
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/html/buildingServices/bms.html">BMS - Building Management System</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a class="nav-link pd"  href="/html/product/product.html?thietBiBaoChay">MẢNG PHÒNG CHÁY - CHỮA CHÁY</a></li>
-                    <li class="nav-item"><a class="nav-link pd"  href="/html/product/product.html?thietBiQuanTrac">MẢNG QUAN TRẮC KHÍ TƯỢNG THỦY VĂN</a></li>                    
-                    <li class="nav-item"><a class="nav-link pd" href="/html/Contact.html">LIÊN HỆ</a></li>
-                </ul>
-            </div>
-        </div>
+
     </nav>
     <!-- End header -->
 
@@ -95,7 +60,8 @@
                                             thuật hàng đầu, bao gồm hệ thống giám sát, cảnh báo an ninh cho ngôi
                                             nhà, giám sát và điều khiển từ xa hệ thống mạng lưới, hỗ trợ kỹ thuật và
                                             an ninh trực tuyến và tại chỗ cho các tòa nhà và đơn vị.</p>
-                                        <a href="" class="btn btn-primary py-3 px-5 animated slideInRight">Tìm hiểu
+                                        <a href="/html/aboutUs.html"
+                                            class="btn btn-primary py-3 px-5 animated slideInRight">Tìm hiểu
                                             thêm</a>
 
                                     </div>
@@ -136,49 +102,47 @@
         </div>
         <!-- Carousel End -->
     </section>
+    
     <section class="py-3" id="features" style="background-color: #f2f5f9 !important;">
         <div class="container py-5">
             <div class="text-center mx-auto" style="max-width: 800px;">
                 <h3 class="display-5s mb-8">SẢN PHẨM CUNG CẤP</h3>
             </div>
             <div class="row g-4 justify-content-center" style="max-width: 1200px; margin: 0 auto;">
-                <div class="col-md-6 col-lg-4">
+                <div class="text-center col-md-6 col-lg-3">
                     <div class="feature-item p-4 pt-0">
                         <div class="feature-icon p-4 mb-4">
-                            <i class="fa-solid fa-industry fa-2x"></i>
+                            <i class="fa-solid fa-cloud-bolt fa-2x"></i>
                         </div>
-                        <h4 class="mb-4">Sản xuất</h4>
-                        <div class="feature-content flex-grow-1">
-                            <p class="mb-1">Thiết bị báo cháy thông minh</p>
-                            <p class="mb-0">Thiết bị giám sát</p>
-                        </div>
-                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-4" href="#">Tìm hiểu thêm</a>
+                        <h4 class="mb-4">Dịch vụ quan trắc khí tượng thủy văn</h4>
+                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/product/product.html">Tìm hiểu thêm</a>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4">
+                <div class="text-center col-md-6 col-lg-3">
                     <div class="feature-item p-4 pt-0">
                         <div class="feature-icon p-4 mb-4">
-                            <i class="fa-solid fa-gears fa-2x"></i>
+                            <i class="fa-solid fa-fire fa-2x"></i>
                         </div>
-                        <h4 class="mb-4">Lắp đặt hệ thống</h4>
-                        <div class="feature-content flex-grow-1">
-                            <p class="mb-0">Hệ thống giám sát quan trắc khí tượng thủy văn</p>
-                            <p class="mb-0">Hệ thống phòng cháy chữa cháy</p>
-                        </div>
-                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-4" href="#">Tìm hiểu thêm</a>
+                        <h4 class="mb-4">Hệ thống phòng cháy chữa cháy</h4>
+                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/product/product.html?thietBiBaoChay">Tìm hiểu thêm</a>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4">
+                <div class="text-center col-md-6 col-lg-3">
+                    <div class="feature-item p-4 pt-0">
+                        <div class="feature-icon p-4 mb-4">
+                            <i class="fa-solid fa-lock fa-2x"></i>
+                        </div>
+                        <h4 class="mb-4">Dịch vụ an ninh</h4>
+                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/product/product.html?thietBiCanhBao">Tìm hiểu thêm</a>
+                    </div>
+                </div>
+                <div class="text-center col-md-6 col-lg-3">
                     <div class="feature-item p-4 pt-0">
                         <div class="feature-icon p-4 mb-4">
                             <i class="fa-solid fa-building fa-2x"></i>
                         </div>
                         <h4 class="mb-4">Dịch vụ kỹ thuật tòa nhà</h4>
-                        <div class="feature-content flex-grow-1">
-                            <p class="mb-0">BMS - Building Management System</p>
-                            <p class="mb-0">BAS - Building Automation System</p>
-                        </div>
-                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-4" href="#">Tìm hiểu thêm</a>
+                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/buildingServices/bms.html">Tìm hiểu thêm</a>
                     </div>
                 </div>
             </div>
@@ -197,7 +161,7 @@
     </section>
 
     <!-- Featurs Section Start -->
-    <div class="container-fluid featurs py-5">
+    <div class="container-fluid featurs py-5" style="background-color: #f2f5f9;">
         <div class="text-center mx-auto" style="max-width: 800px;">
             <h3 class="display-5s mb-8">Cam kết</h3>
         </div>
@@ -210,7 +174,7 @@
                             <i class="fa-solid fa-medal fa-2x text-white" style="font-size: 3em !important;"></i>
                         </div>
                         <div class="featurs-content text-center">
-                            <h5>Chất lượng uy tín</h5>
+                            <h6>Chất lượng uy tín</h6>
                         </div>
                     </div>
                 </div>
@@ -221,7 +185,7 @@
                             <i class="fa-solid fa-comments fa-2x text-white" style="font-size: 3em !important;"></i>
                         </div>
                         <div class="featurs-content text-center">
-                            <h5>Tư vấn kỹ thuật miễn phí</h5>
+                            <h6>Tư vấn kỹ thuật miễn phí</h6>
                         </div>
                     </div>
                 </div>
@@ -232,7 +196,7 @@
                             <i class="fa-solid fa-truck fa-2x text-white" style="font-size: 3em !important;"></i>
                         </div>
                         <div class="featurs-content text-center">
-                            <h5>Lắp đặt nhanh chóng</h5>
+                            <h6>Lắp đặt nhanh chóng</h6>
                         </div>
                     </div>
                 </div>
@@ -244,7 +208,7 @@
                                 style="font-size: 3em !important;"></i>
                         </div>
                         <div class="featurs-content text-center">
-                            <h5>Giá cả cạnh tranh</h5>
+                            <h6>Giá cả cạnh tranh</h6>
                         </div>
                     </div>
                 </div>
@@ -255,7 +219,7 @@
                             <i class="fa-solid fa-shield fa-2x text-white" style="font-size: 3em !important;"></i>
                         </div>
                         <div class="featurs-content text-center">
-                            <h5>Bảo mật thông tin</h5>
+                            <h6>Bảo mật thông tin</h6>
                         </div>
                     </div>
                 </div>
@@ -310,7 +274,7 @@
     </footer>
 
     <!-- JavaScript Libraries -->
-    <script src="/js/all.js"></script>
+    <script src="/js/All/all.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="/js/News/news.js"></script>
