--- a/html/Contact.html
+++ b/html/Contact.html
@@ -13,9 +13,9 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/CSS/contactUs.css">
-    <script src="/js/mailFunction.js"></script>
+    <script src="/js/All/mailFunction.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
-    <script type="module" src="/js/all.js"></script>
+    <script src="/js/All/all.js"></script>
 </head>
 
 <body>    
@@ -33,47 +33,43 @@
         </div>
     </div>
 
-    <!-- Chỉ có navbar là sticky -->
-    <nav id="header" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                Menu
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link pd" href="/html/aboutUs.html">GIỚI THIỆU</a></li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle pd" href="#" id="dropdown1"
-                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            MẢNG AN NINH
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/html/product/product.html?thietBiCanhBao">
-                                    Thiết bị giám sát</a></li>
-                            <li><a class="dropdown-item" href="/html/Security/security.html">
-                                    Dịch vụ an ninh</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle pd" href="#" id="dropdown2" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            MẢNG DỊCH VỤ KỸ THUẬT TÒA NHÀ
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/html/buildingServices/bms.html">BMS - Building Management System</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a class="nav-link pd"  href="/html/product/product.html?thietBiBaoChay">MẢNG PHÒNG CHÁY - CHỮA CHÁY</a></li>
-                    <li class="nav-item"><a class="nav-link pd"  href="/html/product/product.html?thietBiQuanTrac">MẢNG QUAN TRẮC KHÍ TƯỢNG THỦY VĂN</a></li>                    
-                    <li class="nav-item"><a class="nav-link pd" href="/html/Contact.html">LIÊN HỆ</a></li>
-                </ul>
-            </div>
+ <!-- Chỉ có navbar là sticky -->
+ <nav id="header" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            Menu
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item"><a class="nav-link pd" href="/html/aboutUs.html">GIỚI THIỆU</a></li>
+                <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiQuanTrac">MẢNG
+                        QUAN TRẮC KHÍ TƯỢNG THỦY VĂN</a></li>
+                <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiBaoChay">MẢNG
+                        PHÒNG CHÁY - CHỮA CHÁY</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle pd" href="#" id="dropdown1" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        MẢNG AN NINH
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="/html/product/product.html?thietBiCanhBao">
+                                Thiết bị giám sát</a></li>
+                        <li><a class="dropdown-item" href="/html/Security/security.html">
+                                Dịch vụ an ninh</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item"><a class="nav-link pd" href="/html/buildingServices/bms.html">MẢNG DỊCH VỤ KỸ
+                        THUẬT TÒA NHÀ</a></li>
+                <li class="nav-item"><a class="nav-link pd" href="/html/Contact.html">LIÊN HỆ</a></li>
+            </ul>
         </div>
-    </nav>
-    <!-- End header -->
+    </div>
+</nav>
+<!-- End header -->
+
 
         <div class="container mt-5">
             <h2 class="text-center mb-4">Địa chỉ</h2>
