--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -15,9 +15,8 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <script src="/js/mailFunction.js"></script>
-    <script src="/js/all.js"></script>
+        crossorigin="anonymous"></script>    
+    <script src="/js/All/all.js"></script>
 </head>
 
 <body>
@@ -58,16 +57,7 @@
                                     Dịch vụ an ninh</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle pd" href="#" id="dropdown2" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            MẢNG DỊCH VỤ KỸ THUẬT TÒA NHÀ
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/html/buildingServices/bms.html">BMS - Building
-                                    Management System</a></li>
-                        </ul>
-                    </li>
+                    <li class="nav-item"><a class="nav-link pd" href="/html/buildingServices/bms.html">MẢNG DỊCH VỤ KỸ THUẬT TÒA NHÀ</a></li>
                     <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiBaoChay">MẢNG
                             PHÒNG CHÁY - CHỮA CHÁY</a></li>
                     <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiQuanTrac">MẢNG
@@ -117,7 +107,7 @@
                 <div class="col-lg-6 col-xxl-4 mb-5">
                     <div class="card bg-light border-0 h-100 hover-card">
                         <a href="#" class="card-link">
-                            <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
+                            <div class="card-body text-center p-4 p-lg-5">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"
                                     style="background-color: #3a389b !important">
                                     <i class="fa-solid fa-industry"></i>
@@ -131,7 +121,7 @@
                 <div class="col-lg-6 col-xxl-4 mb-5">
                     <div class="card bg-light border-0 h-100 hover-card">
                         <a href="#" class="card-link">
-                            <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
+                            <div class="card-body text-center p-4 p-lg-5">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"
                                     style="background-color: #3a389b !important">
                                     <i class="fa-solid fa-gears"></i>
@@ -146,7 +136,7 @@
                 <div class="col-lg-6 col-xxl-4 mb-5">
                     <div class="card bg-light border-0 h-100 hover-card">
                         <a href="#" class="card-link">
-                            <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
+                            <div class="card-body text-center p-4 p-lg-5">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"
                                     style="background-color: #3a389b !important">
                                     <i class="fa-solid fa-building"></i>
