--- a/html/buildingServices/bms.html
+++ b/html/buildingServices/bms.html
@@ -14,7 +14,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/CSS/bms.css">
-    <script src="/js/all.js"></script>
+    <script src="/js/All/all.js"></script>
 </head>
 
 <body>
@@ -43,6 +43,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link pd" href="/html/aboutUs.html">GIỚI THIỆU</a></li>
+                    <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiQuanTrac">MẢNG
+                            QUAN TRẮC KHÍ TƯỢNG THỦY VĂN</a></li>
+                    <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiBaoChay">MẢNG
+                            PHÒNG CHÁY - CHỮA CHÁY</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle pd" href="#" id="dropdown1" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -55,20 +59,8 @@
                                     Dịch vụ an ninh</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle pd" href="#" id="dropdown2" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            MẢNG DỊCH VỤ KỸ THUẬT TÒA NHÀ
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/html/buildingServices/bms.html">BMS - Building
-                                    Management System</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiBaoChay">MẢNG
-                            PHÒNG CHÁY - CHỮA CHÁY</a></li>
-                    <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiQuanTrac">MẢNG
-                            QUAN TRẮC KHÍ TƯỢNG THỦY VĂN</a></li>
+                    <li class="nav-item"><a class="nav-link pd" href="/html/buildingServices/bms.html">MẢNG DỊCH VỤ KỸ
+                            THUẬT TÒA NHÀ</a></li>
                     <li class="nav-item"><a class="nav-link pd" href="/html/Contact.html">LIÊN HỆ</a></li>
                 </ul>
             </div>
@@ -133,7 +125,7 @@
             </div>
         </div>
     </footer>
-    <script type="module" src="/js/buidingServicesHome.js"></script>
+    <script type="module" src="/js/BuildingService/buidingServicesHome.js"></script>
 
 </body>
 
