--- a/html/product/product.html
+++ b/html/product/product.html
@@ -14,8 +14,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <script type="module" src="/js/data.js"></script>
-    <script type="module" src="/js/all.js"></script>
+    <script type="module" src="/js/Product//data.js"></script>
+    <script src="/js/All/all.js"></script>
 </head>
 
 <body>
@@ -44,6 +44,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link pd" href="/html/aboutUs.html">GIỚI THIỆU</a></li>
+                    <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiQuanTrac">MẢNG
+                            QUAN TRẮC KHÍ TƯỢNG THỦY VĂN</a></li>
+                    <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiBaoChay">MẢNG
+                            PHÒNG CHÁY - CHỮA CHÁY</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle pd" href="#" id="dropdown1" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -56,20 +60,8 @@
                                     Dịch vụ an ninh</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle pd" href="#" id="dropdown2" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            MẢNG DỊCH VỤ KỸ THUẬT TÒA NHÀ
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/html/buildingServices/bms.html">BMS - Building
-                                    Management System</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiBaoChay">MẢNG
-                            PHÒNG CHÁY - CHỮA CHÁY</a></li>
-                    <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiQuanTrac">MẢNG
-                            QUAN TRẮC KHÍ TƯỢNG THỦY VĂN</a></li>
+                    <li class="nav-item"><a class="nav-link pd" href="/html/buildingServices/bms.html">MẢNG DỊCH VỤ KỸ
+                            THUẬT TÒA NHÀ</a></li>
                     <li class="nav-item"><a class="nav-link pd" href="/html/Contact.html">LIÊN HỆ</a></li>
                 </ul>
             </div>
@@ -77,39 +69,7 @@
     </nav>
     <!-- End header -->
 
-    <!-- Menu -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container px-4 px-lg-5">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page"
-                            href="/html/product/product.html">Tất cả thiết bị</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page"
-                            href="/html/product/product.html?thietBiBaoChay">Thiết bị cảnh báo
-                            cháy</a></li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown"
-                            href="/html/product/product.html?thietBiCanhBao" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">Danh mục thiết bị giám sát</a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="/html/product/productDetail.html?maso=1">Thiết bị access
-                                    control - Slock</a>
-                            </li>
-                            <li><a class="dropdown-item" href="/html/product/productDetail.html?maso=3">Thiết bị điều
-                                    khiển giám sát an ninh</a></li>
-                            <li><a class="dropdown-item" href="/html/product/productDetail.html?maso=4">Thiết bị theo
-                                    dõi tiêu thụ điện năng</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page"
-                            href="/html/product/product.html?thietBiQuanTrac">Thiết bị quan trắc trạm khí tượng</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+
 
     <section class="py-1">
         <div class="container px-4 px-lg-5 mt-5">
